@@ -1,3 +1,8 @@
+2012-01-04  Wolfgang Jenkner  <wjenkner@inode.at>
+
+	* gnus-agent.el (gnus-agent-load-local): Recompute
+	gnus-agent-article-local on changing method.
+
 2012-01-04  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus.el (gnus-parameters): Note precedence.
